# Workshop_Computer

.github/scripts/: update-readme.py
Demonstrations+HelloWorlds/PicoSDK/ComputerCard/: NOTES.md  README.md
releases/: README.md
releases/00_Simple_MIDI/v2_prototype/: AnalogueToMIDI.h  CMakeLists.txt  ComputerCard.h  README.md  WebInterfaceComputerCard.h  interface.js  main.cpp  usb_descriptors.c  usb_midi_host.c
releases/00_Simple_MIDI/v2_prototype/firmware/: AnalogueToMIDI.h  CMakeLists.txt  Calibration.h  ComputerCard.h  Menu.h  MidiToCv.h  NoteDownStore.h  WebInterfaceComputerCard.h  main.cpp  test_passthrough.cpp  tusb_config.h  usb_midi_host.h  usb_midi_host_app_driver.c
releases/00_Simple_MIDI/v2_prototype/ui/: index.html  interface.js
releases/00_Simple_MIDI/v2_prototype/web_interface/: index.html  interface.js
releases/06_usb_audio/: README.md
releases/15_MLRws/: main.cpp  usb_descriptors.c
releases/15_MLRws/UF2/: MLRws.1.1.4.uf2
releases/18_chord_organ/: README.md  main.cpp  progressions.h
releases/20_reverb/: info.yaml
releases/33_drumdrum/: CMakeLists.txt  README.md  drumdrum.uf2  editor.html  info.yaml  shared_state.h  tusb_config.h  usb_core1.cpp
releases/69_trace/: README.md
releases/69_trace/uf2/: trace_v0.1.uf2
releases/71_degenerator/: README.md  degenerator.uf2  info.yaml
releases/82_Computer_Grids/: CMakeLists.txt  ConfigStore.cpp  ConfigStore.h  GridsCard.cpp  GridsCard.h  GridsEngine.cpp  GridsEngine.h  README.md  context.md  info.yaml  sysex_spec.json
releases/82_Computer_Grids/UF2/: 82_Computer_Grids.uf2
releases/82_Computer_Grids/web/: app.js  index.html
releases/98_duo_midi/: README.md
tools/sitegen/assets/: style.css
tools/sitegen/src/: build.js
tools/sitegen/src/render/: layout.js
(+2 files in other folders)
